--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
     sdk: flutter
   firebase_core: ^2.24.2
   cloud_firestore: ^4.14.0
+  image_picker: ^1.0.7
+  http: ^1.2.0
 
 flutter:
   uses-material-design: true
