--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   cloud_firestore: ^4.14.0
   image_picker: ^1.0.7
   http: ^1.2.0
+  firebase_auth: ^4.17.4
 
 flutter:
   uses-material-design: true
