--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   image_picker: ^1.0.7
   http: ^1.2.0
   firebase_auth: ^4.17.4
+  firebase_messaging: ^14.7.15
 
 flutter:
   uses-material-design: true
