--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
         run: flutter pub get
 
       - name: Build APK
-        run: flutter build apk --release
+        run: sed -i "s/flutter.minSdkVersion/21/g" android/app/build.gradle && flutter build apk --release
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
